<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorAvalonBlue">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/setting_linearlayout_regoniationMinValue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textsize_h1"
                android:orientation="horizontal"
                android:padding="@dimen/padding_default">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:textSize="@dimen/textsize_h5"
                        android:textColor="@color/colorAvalonWhite"
                        android:text="@string/setting_title_recognition"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="left|bottom"
                        android:textSize="@dimen/textsize_subtitle2"
                        android:textColor="@color/colorAvalonWhite"
                        android:text="@string/setting_description_recognition"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/setting_textview_regoniationMinValue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="left|center"
                    android:textSize="@dimen/textsize_h6"
                    android:textColor="@color/colorAvalonDeepYellow"
                    android:text="80%"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/setting_linearlayout_dictionaryType"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textsize_h1"
                android:orientation="horizontal"
                android:padding="@dimen/padding_default">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:textSize="@dimen/textsize_h5"
                        android:textColor="@color/colorAvalonWhite"
                        android:text="@string/setting_title_selectdictionary"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="left|bottom"
                        android:textSize="@dimen/textsize_subtitle2"
                        android:textColor="@color/colorAvalonWhite"
                        android:text="@string/setting_description_selectdictionary"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/setting_textview_dictionaryType"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="left|center"
                    android:textSize="@dimen/textsize_h6"
                    android:textColor="@color/colorAvalonDeepYellow"
                    android:text="백과사전"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/setting_linearlayout_autoRecording"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textsize_h1"
                android:orientation="horizontal"
                android:padding="@dimen/padding_default">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:textSize="@dimen/textsize_h5"
                        android:textColor="@color/colorAvalonWhite"
                        android:text="@string/setting_title_autorecording"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="left|bottom"
                        android:textSize="@dimen/textsize_subtitle2"
                        android:textColor="@color/colorAvalonWhite"
                        android:text="@string/setting_description_autorecording"/>
                </LinearLayout>
                <CheckBox
                    android:id="@+id/setting_checkbox_autoRecording"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="left|center_vertical"
                    android:checked="true"
                    android:buttonTint="@color/colorAvalonDeepYellow"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/setting_linearlayout_showRecognitionMinValue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textsize_h1"
                android:orientation="horizontal"
                android:padding="@dimen/padding_default">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:textSize="@dimen/textsize_h5"
                        android:textColor="@color/colorAvalonWhite"
                        android:text="@string/setting_title_showrecognition"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="left|bottom"
                        android:textSize="@dimen/textsize_subtitle2"
                        android:textColor="@color/colorAvalonWhite"
                        android:text="@string/setting_description_showrecognition"/>
                </LinearLayout>
                <CheckBox
                    android:id="@+id/setting_checkbox_showRecognitionMinValue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="left|center_vertical"
                    android:checked="true"
                    android:buttonTint="@color/colorAvalonDeepYellow"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/setting_linearlayout_resetDatabase"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textsize_h1"
                android:orientation="horizontal"
                android:padding="@dimen/padding_default">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:textSize="@dimen/textsize_h5"
                        android:textColor="@color/colorAvalonWhite"
                        android:text="@string/setting_title_resetdatabase"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="left|bottom"
                        android:textSize="@dimen/textsize_subtitle2"
                        android:textColor="@color/colorAvalonWhite"
                        android:text="@string/setting_description_resetdatabase"/>
                </LinearLayout>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/setting_linearlayout_license"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textsize_h1"
                android:orientation="horizontal"
                android:padding="@dimen/padding_default">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:textSize="@dimen/textsize_h5"
                        android:textColor="@color/colorAvalonWhite"
                        android:text="@string/setting_title_license"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:gravity="left|bottom"
                        android:textSize="@dimen/textsize_subtitle2"
                        android:textColor="@color/colorAvalonWhite"
                        android:text="@string/setting_description_license"/>
                </LinearLayout>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>