<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/search_linearlayout_container"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorAvalonBlue"
              android:paddingHorizontal="@dimen/padding_default">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/textsize_h3"
        android:background="@color/colorAvalonWhite"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/search_appcompatedittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:backgroundTint="@color/colorAvalonDeepYellow"
            android:lines="1"
            android:singleLine="true"
            android:textSize="@dimen/textsize_h5"
            android:hint="@string/search_edittext_hint"
            android:inputType="text"/>
        <RelativeLayout
            android:id="@+id/search_relativelayout_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/search_imageview_search"
                android:layout_width="@dimen/textsize_h4"
                android:layout_height="@dimen/textsize_h4"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_search_black_24dp"
                android:tint="@color/colorAvalonDeepBlue"/>
            <ProgressBar
                android:id="@+id/search_progressbar"
                android:layout_width="@dimen/textsize_h4"
                android:layout_height="@dimen/textsize_h4"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/search_textview_hint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textsize_subtitle1"
        android:visibility="gone"
        android:textColor="@color/colorAvalonWhite"
        android:text="@string/search_edittext_hint_empty"/>
    <LinearLayout
        android:id="@+id/search_linearlayout_information"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/search_imageview_information"
                android:layout_width="@dimen/textsize_h1"
                android:layout_height="@dimen/textsize_h1"
                android:layout_centerInParent="true"
                android:tint="@color/colorAvalonDeepYellow"
                app:srcCompat="@drawable/ic_sentiment_very_dissatisfied_black_24dp"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/search_textview_information"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorAvalonDeepYellow"
            android:textSize="@dimen/textsize_h6"
            android:text="@string/search_information_nothing"/>
        <LinearLayout
            android:id="@+id/search_linearlaout_informationmenu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textsize_h4"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/search_imageview_informationRetry"
                android:layout_width="0dp"
                android:layout_height="@dimen/textsize_h5"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:tint="@color/colorAvalonWhite"
                app:srcCompat="@drawable/ic_refresh_black_24dp"/>
            <TextView
                android:id="@+id/search_textview_informationRetry"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textSize="@dimen/textsize_subtitle1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorAvalonWhite"
                android:text="@string/search_information_retry"/>
            <ImageView
                android:id="@+id/search_imageview_informationChangeDictionary"
                android:layout_width="0dp"
                android:layout_height="@dimen/textsize_h5"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:tint="@color/colorAvalonWhite"
                app:srcCompat="@drawable/ic_settings_black_24dp"/>
            <TextView
                android:id="@+id/search_textview_informationChangeDictionary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textSize="@dimen/textsize_subtitle1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorAvalonWhite"
                android:text="@string/search_information_changedictionary"/>
        </LinearLayout>
        <View
            android:id="@+id/search_view_bottomSpace"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>