<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/itemdetail_linearlayout_container"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorAvalonBlue"
              android:paddingHorizontal="@dimen/padding_default">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/itemdetail_imageview"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"/>
            <TextView
                android:id="@+id/itemdetail_textview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorAvalonDeepYellow"
                android:textSize="@dimen/textsize_h3"
                android:text="sample"/>
            <TextView
                android:id="@+id/itemdetail_textview_language"
                android:layout_width="100dp"
                android:layout_height="@dimen/textsize_h4"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorAvalonYellow"
                android:textSize="@dimen/textsize_subtitle1"
                android:background="@drawable/shape_rectangle"
                android:text="sample"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/textsize_h4"/>
            <TextView
                android:id="@+id/itemdetail_textview_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAvalonWhite"
                android:textSize="@dimen/textsize_subtitle1"
                android:text="description"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/textsize_h4"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/itemdetail_imageview_favorite"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/textsize_h5"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:tint="@color/colorAvalonWhite"
                    app:srcCompat="@drawable/ic_bookmark_border_black_24dp"/>
                <TextView
                    android:id="@+id/itemdetail_textview_favorite"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/colorAvalonWhite"
                    android:textSize="@dimen/textsize_subtitle1"
                    android:text="@string/itemdetail_favorite"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/itemdetail_imageview_link"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/textsize_h5"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:tint="@color/colorAvalonWhite"
                    app:srcCompat="@drawable/ic_public_black_24dp"/>
                <TextView
                    android:id="@+id/itemdetail_textview_link"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/colorAvalonWhite"
                    android:textSize="@dimen/textsize_subtitle1"
                    android:text="@string/itemdetail_link"/>
            </LinearLayout>
            <TextView
                android:id="@+id/itemdetail_textview_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAvalonWhitePressed"
                android:layout_gravity="right"
                android:gravity="right"
                android:textSize="@dimen/textsize_subtitle1"
                android:text="date"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/textsize_h4"/>
            <TextView
                android:id="@+id/itemdetail_textview_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorAvalonYellow"
                android:textSize="@dimen/textsize_h6"
                android:text="@string/itemdetail_delete"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>